--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "example_mod",
-	"name": "Example Mod",
+	"id": "infernity_testing_mod",
+	"name": "Infernity Testing Mod",
 	"version": "0.0.1"
 }
