--- a/Mod.csproj
+++ b/Mod.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>ExampleMod</AssemblyName>
+    <AssemblyName>InfernityTestingMod</AssemblyName>
     <TargetFramework>netstandard2.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
+    <Company>InfernityTestingMod</Company>
+    <Product>InfernityTestingMod</Product>
+    <PackageId>InfernityTestingMod</PackageId>
+    <Authors>infernostars</Authors>
   </PropertyGroup>
 
   <ItemGroup>
